fix: address API health review feedback